<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/candlestick"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_trade"
        android:icon="@drawable/trade"
        android:title="@string/title_trade" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/order"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/title_wallet" />

</menu>