<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vijay.koinbx.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.vijay.koinbx.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />
    <fragment
        android:id="@+id/navigation_trade"
        android:name="com.vijay.koinbx.ui.trade.TradeFragment"
        android:label="@string/title_trade"
        tools:layout="@layout/fragment_trade" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.vijay.koinbx.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.vijay.koinbx.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />
</navigation>