<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:src="@drawable/xlogo"
        android:layout_margin="5dp"
        android:contentDescription="@string/logoimage" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:text="@string/top_performers"/>
        <!-- TabLayout for tabs -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 app:tabIndicatorColor="@color/maincolor"
                 android:contentDescription="@string/tabslayout"
                 app:tabIndicatorHeight="4dp"
                 app:tabSelectedTextColor="@color/black"
                 app:tabTextColor="@color/grey" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
                 android:background="@color/grey"/>

     </RelativeLayout>


        <!-- ViewPager2 for swiping between fragments -->

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


</LinearLayout>